# gozar-ytdl-ms

./: Dockerfile  cookies.txt  pyproject.toml
src/: deps.py  main.py  models.py  utils.py  yt.py
