[tool.poetry]
name = "gozar-yt-download-ms"
version = "0.1.0"
description = ""
authors = ["Lord-A2K <amirkiankaveh@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
yt-dlp = "^2025.2.19"
python-dotenv = "^1.0.1"
fastapi = "^0.115.8"
pydantic = "^2.10.6"
uvicorn = "^0.34.0"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
